fix: test Postman test успешно